--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -5,6 +5,8 @@ body {
   background-color: $bg;
   color: $color;
   font-family: 'Inter', Helvetica, Arial, sans-serif;
+  font-size: 1rem;
+  line-height: 1.5;
   margin: 0;
   padding: 0;
   -webkit-font-smoothing: antialiased;
@@ -12,6 +14,7 @@ body {
 }
 
 h1, h2, h3 {
+  line-height: 1.2;
   margin-top: 0;
 }
 
