Reduces padding on card on mobile and adds meta title and description

--- a/client/src/components/Card.scss
+++ b/client/src/components/Card.scss
@@ -7,7 +7,7 @@
   box-shadow: 0 0.3rem 0.5rem rgba($color, 0.1);
   margin: 1rem auto;
   max-width: 36rem;
-  padding: 2rem;
+  padding: 2rem 1.5rem;
   width: 95%;
 
   @include breakpoint(tablet) {
