Styles form. Adds floating label to showcase useEffect hook

--- a/client/src/styles/_colors.scss
+++ b/client/src/styles/_colors.scss
@@ -1,7 +1,9 @@
 $color: #3c453e;
 $color-primary: #2f8459;
+$color-error: #d7110f;
+$color-white: #fff;
 
 $bg: #f5f8f7;
-$bg-white: #fff;
+$bg-white: $color-white;
 $bg-primary: #1f5e3f;
 $bg-primary-dark: #0f3925;
