--- a/client/src/components/Search.scss
+++ b/client/src/components/Search.scss
@@ -56,6 +56,7 @@ $search-input-padding-y: 0.5rem;
   left: 0;
   line-height: normal;
   padding: $search-input-padding-y $search-button-width $search-input-padding-y $search-input-padding-x;
+  pointer-events: none;
   position: absolute;
   top: 0;
   transform-origin: left;
